--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <div data-include="/components/header.html" data-lazy="0"></div>
+            <div data-include="components/header.html" data-lazy="0"></div>
         </header>
         <main>
             <h2>Website Evaluations</h2>
