--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -54,7 +54,7 @@
     </head>
     <body>
         <header>
-            <div data-include="/components/header.html" data-lazy="0"></div>
+            <div data-include="components/header.html" data-lazy="0"></div>
         </header>
         <main>
             <h2>HTML Tables</h2>
