--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -32,10 +32,9 @@
     </style>
 </head>
 <body>
-    <h1>Collin Gallagher's Carefree Goose | ITIS3135</h1>
     <header>
         <div data-include="components/header.html"></div>
-    </header>>
+    </header>
     <h2>Personal Introduction Form</h2>
     <form id="introForm">
         <p class="form-row">
