--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -54,7 +54,7 @@
     </head>
     <body>
         <header>
-            <div data-include="components/header.html" data-lazy="0"></div>
+            <div data-include="components/header.html"></div>
         </header>
         <main>
             <h2>HTML Tables</h2>
@@ -168,7 +168,7 @@
             </figure>
         </main>
         <footer>
-            <div data-include="components/footer.html" data-lazy="0"></div>
+            <div data-include="components/footer.html"></div>
         </footer>
         <script src="scripts/HTMLinclude.js"></script>
     </body>
