--- a/itis3135/website_evaluations.html
+++ b/itis3135/website_evaluations.html
@@ -38,6 +38,6 @@
         <footer>
             <div data-include="components/footer.html"></div>
         </footer>
-        <script src="scripts/HTMLinclude.js"></script>
+        <script src="scripts/HTMLInclude.js"></script>
     </body>
 </html>
