--- a/itis3135/collincollective.com/index.html
+++ b/itis3135/collincollective.com/index.html
@@ -78,6 +78,9 @@
             <p><strong>Address:</strong> 123 Design Lane, Charlotte, NC 98765</p>
         </div>
     </main>
+    <footer>
+        <p>&copy; 2025 Collin Collective. All rights reserved.</p>
+    </footer>
 </body>
 </html>
 	
