--- a/index.html
+++ b/index.html
@@ -11,19 +11,8 @@
 		<h2>Home Page</h2>
 		<p>Take a look at all my cool links!</p>
 		<footer>
-			<nav>
-				<a href="https://webpages.charlotte.edu/cgalla17/">Charlotte.edu</a>
-				-
-				<a href="https://github.com/cjgalla">GitHub</a>
-				-
-				<a href="https://cjgalla.github.io/">GitHub.io</a>
-				-
-				<a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
-				-
-				<a href="itis3135/">ITIS-3135</a>
-			</nav>
-			<p>Page built by <a href="collincollective.com/">Collin Collective</a>&copy; 2025</p>
+			<div data-include="components/footer.html"></div>
 		</footer>
-		
+		<script src="scripts/HTMLInclude.js"></script>
 	</body>
 </html>
