--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 		<h2>Home Page</h2>
 		<p>Take a look at all my cool links!</p>
 		<footer>
-			<div data-include="itis3135/components/footer.html"></div>
+			<nav>
+				<a href="https://webpages.charlotte.edu/cgalla17/">Charlotte.edu</a>
+				-
+				<a href="https://github.com/cjgalla">GitHub</a>
+				-
+				<a href="https://cjgalla.github.io/">GitHub.io</a>
+				-
+				<a href="https://www.linkedin.com/in/collingall/">Linkedin</a>
+				-
+				<a href="itis3135/">ITIS-3135</a>
+			</nav>
+			<p>Page built by <a href="collincollective.com/index.html">Collin Collective</a>&copy; 2025, <a href="https://www.freecodecamp.org/certification/cjgallagher/responsive-web-design">Certified in Responsive Web Design</a></p>
 		</footer>
-		<script src="scripts/HTMLInclude.js"></script>
 	</body>
 </html>
