--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="styles/default.css">
     <title>Project Overview</title>
 </head>
 <body>
@@ -132,6 +134,6 @@
     <footer>
         <div data-include="components/footer.html"></div>
     </footer>
-    <script src="scripts/include.js"></script>
+    <script src="scripts/HTMLInclude.js"></script>
 </body>
 </html>
