--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -130,6 +130,7 @@
                     Additional features will include a collapsible navigation menu for mobile users, hover effects on images, and a well designed gallery page to allow maximum user engagement. These dynamic touches aim to make the site feel smooth, engaging, and professional.
                 </p>
             </section>
+        </section>
     </main>
     <footer>
         <div data-include="components/footer.html"></div>
