--- a/itis3135/project_overview.html
+++ b/itis3135/project_overview.html
@@ -33,23 +33,23 @@
             <h3>Wireframes</h3>
             <p>Wireframes created using Draw.io:</p>
             <figure>
-                <img src="images/wireframe_home.drawio.png" alt="Homepage Wireframe">
+                <img class="wireframe-img" src="images/wireframe_home.drawio.png" alt="Homepage Wireframe">
                 <figcaption><em>Homepage Wireframe</em></figcaption>
             </figure>
             <figure>
-                <img src="images/wireframe_about.drawio.png" alt="About Us Wireframe">
+                <img class="wireframe-img" src="images/wireframe_about.drawio.png" alt="About Us Wireframe">
                 <figcaption><em>About Us Page Wireframe</em></figcaption>
             </figure>
             <figure>
-                <img src="images/wireframe_US.drawio.png" alt="US Gallery Wireframe">
+                <img class="wireframe-img" src="images/wireframe_US.drawio.png" alt="US Gallery Wireframe">
                 <figcaption><em>United States Gallery Page Wireframe</em></figcaption>
             </figure>
             <figure>
-                <img src="images/wireframe_global.drawio.png" alt="Global Gallery Wireframe">
+                <img class="wireframe-img" src="images/wireframe_global.drawio.png" alt="Global Gallery Wireframe">
                 <figcaption><em>Global Gallery Page Wireframe</em></figcaption>
             </figure>
             <figure>
-                <img src="images/wireframe_review.drawio.png" alt="Review Page Wireframe">
+                <img class="wireframe-img" src="images/wireframe_review.drawio.png" alt="Review Page Wireframe">
                 <figcaption><em>Review Page Wireframe</em></figcaption>
             </figure>
             <p><a href="https://drive.google.com/file/d/1ckZvO_EuFYCmZbdQiI9S84hVeh0eyY8I/view?usp=sharing">View the Wireframes</a></p>
@@ -58,7 +58,7 @@
             <h3>Site Map</h3>
             <p>Sitemap created using draw.io:</p>
             <figure>
-                <img src="images/sitemap.drawio.png" alt="Sitemap">
+                <img class="wireframe-img" src="images/sitemap.drawio.png" alt="Sitemap">
                 <figcaption>Website Sitemap</figcaption>
             </figure>
             <p><a href="https://drive.google.com/file/d/1Ha1ThoYqIN0PB5ayrhzreE_OupAKZJJw/view?usp=sharing">View the Sitemap</a></p>
