--- a/itis3135/natureinshutterspeed/index.html
+++ b/itis3135/natureinshutterspeed/index.html
@@ -13,8 +13,8 @@
 
   <main>
     <section class="intro-images">
-      <img src="images/placeholder1.jpg" alt="Featured photo 1" class="front-photo">
-      <img src="images/placeholder2.jpg" alt="Featured photo 2" class="front-photo">
+      <img src="images/pacific4.jpg" alt="Sunset over the pacific" class="front-photo">
+      <img src="images/glacier1.jpg" alt="Glacier National Park" class="front-photo">
     </section>
 
     <section class="intro">
@@ -23,7 +23,7 @@
         Welcome to <strong>Nature In Shutter Speed</strong> — a digital gallery of awe-inspiring photographs captured by a passionate explorer and nature enthusiast who’s journeyed across 48 U.S. states and beyond.
       </p>
       <p>
-        This website highlights the beauty of nature, as seen through the lens of years of travel and adventure. Explore our photo galleries, learn the story behind the camera, and share your thoughts or suggestions for future destinations.
+        This website highlights the beauty of nature, as seen through the lens of years of travel and adventure. It's also a call to those who want to explore the world and discover the wonders of nature, and gives a look into what you might see if you did travel the world. Explore our photo galleries, learn the story behind the camera, and share your thoughts or suggestions for future destinations.
       </p>
     </section>
   </main>
