--- a/itis3135/natureinshutterspeed/index.html
+++ b/itis3135/natureinshutterspeed/index.html
@@ -13,8 +13,8 @@
 
   <main>
     <section class="intro-images">
-      <img src="images/pacific4.jpg" alt="Sunset over the pacific" class="front-photo">
-      <img src="images/glacier1.jpg" alt="Glacier National Park" class="front-photo">
+      <img src="images/western/pacific4.JPG" alt="Sunset over the pacific" class="front-photo">
+      <img src="images/western/glacier1.JPG" alt="Glacier National Park" class="front-photo">
     </section>
 
     <section class="intro">
