--- a/itis3135/natureinshutterspeed/about.html
+++ b/itis3135/natureinshutterspeed/about.html
@@ -11,6 +11,9 @@
   </header>
   <main class="intro">
     <h2>About the Photographer</h2>
+    <section>
+      <img src="images/western/kayakpic.jpg" alt="My son and I" />
+    </section>
     <p>Being born in the US I always wanted to get the chance to get to explore this entire country I call home. So I made it a goal of mine to get and see all 50 states. Little did I know that would turn into 30 years of the travel bug and spreading the love for nature and the world around us to my son. Now I have been to 48 of the 50 states, and I have always enjoyed photography as a hobby. So when I started taking my son on cross country trips I bought a camera, and the rest, well you'll just have to see</p>
   </main>
   <footer>
