--- a/itis3135/natureinshutterspeed/east_gallery.html
+++ b/itis3135/natureinshutterspeed/east_gallery.html
@@ -12,10 +12,32 @@
   <main>
     <h2 class="intro">Gallery: Eastern United States</h2>
     <section class="gallery-grid">
-      <img src="images/east/photo1.jpg" alt="Smoky Mountains" />
-      <img src="images/east/photo2.jpg" alt="Blue Ridge Parkway" />
-      <img src="images/east/photo3.jpg" alt="Acadia National Park" />
+      <img src="images/eastern/beach.jpg" alt="Beach scene" loading="lazy" />
+      <img src="images/eastern/beach2.jpg" alt="Beach view 2" loading="lazy" />
+      <img src="images/eastern/bridges.jpg" alt="Bridges" loading="lazy" />
+      <img src="images/eastern/creek.jpg" alt="Creek" loading="lazy" />
+      <img src="images/eastern/discatlake.jpg" alt="Disc golf by lake" loading="lazy" />
+      <img src="images/eastern/helmet.jpg" alt="Helmet mosaic" loading="lazy" />
+      <img src="images/eastern/lighthous.jpg" alt="Lighthouse" loading="lazy" />
+      <img src="images/eastern/me1.jpg" alt="Hiking in woods" loading="lazy" />
+      <img src="images/eastern/me2.jpg" alt="Snowy trail" loading="lazy" />
+      <img src="images/eastern/me3.jpg" alt="Bridge crossing" loading="lazy" />
+      <img src="images/eastern/me6.jpg" alt="Pathway" loading="lazy" />
+      <img src="images/eastern/merica.jpg" alt="Flag scene" loading="lazy" />
+      <img src="images/eastern/ne1.jpg" alt="New England 1" loading="lazy" />
+      <img src="images/eastern/ne2.jpg" alt="New England 2" loading="lazy" />
+      <img src="images/eastern/newOr1.jpg" alt="New Orleans 1" loading="lazy" />
+      <img src="images/eastern/newOr2.jpg" alt="New Orleans 2" loading="lazy" />
+      <img src="images/eastern/newOr3.jpg" alt="New Orleans 3" loading="lazy" />
+      <img src="images/eastern/newOr4.jpg" alt="New Orleans 4" loading="lazy" />
+      <img src="images/eastern/ny1.jpg" alt="New York 1" loading="lazy" />
+      <img src="images/eastern/ny2.jpg" alt="New York 2" loading="lazy" />
+      <img src="images/eastern/paintedrocks.jpg" alt="Painted Rocks Lakeshore" loading="lazy" />
+      <img src="images/eastern/panthers.jpg" alt="Panthers game" loading="lazy" />
+      <img src="images/eastern/stlouisarch.jpg" alt="St. Louis Arch" loading="lazy" />
+      <img src="images/eastern/stlouisarch2.jpg" alt="St. Louis Arch night" loading="lazy" />
     </section>
+    
   </main>
   <footer>
     <div data-include="components/footer.html"></div>
