--- a/itis3135/natureinshutterspeed/west_gallery.html
+++ b/itis3135/natureinshutterspeed/west_gallery.html
@@ -12,10 +12,73 @@
   <main>
     <h2 class="intro">Gallery: Western United States</h2>
     <section class="gallery-grid">
-      <img src="images/west/photo1.jpg" alt="Yosemite" />
-      <img src="images/west/photo2.jpg" alt="Grand Canyon" />
-      <img src="images/west/photo3.jpg" alt="Zion National Park" />
+      <img src="images/western/ariz1.JPG" alt="Arizona landscape 1" loading="lazy" />
+      <img src="images/western/ariz4.JPG" alt="Arizona landscape 2" loading="lazy" />
+      <img src="images/western/ariz5.JPG" alt="Arizona landscape 3" loading="lazy" />
+      <img src="images/western/ariz6.jpg" alt="Arizona view" loading="lazy" />
+      <img src="images/western/arizss.jpg" alt="Arizona sunset" loading="lazy" />
+      <img src="images/western/badland2.JPG" alt="Badlands view 2" loading="lazy" />
+      <img src="images/western/badland3.JPG" alt="Badlands view 3" loading="lazy" />
+      <img src="images/western/badland4.JPG" alt="Badlands view 4" loading="lazy" />
+      <img src="images/western/badland5.jpg" alt="Badlands road" loading="lazy" />
+      <img src="images/western/badland1.JPG" alt="Badlands entry sign" loading="lazy" />
+      <img src="images/western/cooltrees.JPG" alt="Cool trees" loading="lazy" />
+      <img src="images/western/field.jpg" alt="Open field" loading="lazy" />
+      <img src="images/western/glacier1.JPG" alt="Glacier National Park 1" loading="lazy" />
+      <img src="images/western/glacier2.JPG" alt="Glacier 2" loading="lazy" />
+      <img src="images/western/glacier3.JPG" alt="Glacier 3" loading="lazy" />
+      <img src="images/western/glacier4.JPG" alt="Glacier 4" loading="lazy" />
+      <img src="images/western/glacier5.JPG" alt="Glacier 5" loading="lazy" />
+      <img src="images/western/glamping.jpg" alt="Camping setup" loading="lazy" />
+      <img src="images/western/grandcan1.JPG" alt="Grand Canyon 1" loading="lazy" />
+      <img src="images/western/grandcan2.JPG" alt="Grand Canyon 2" loading="lazy" />
+      <img src="images/western/grandcan4.JPG" alt="Grand Canyon 4" loading="lazy" />
+      <img src="images/western/horshoebend.jpg" alt="Horseshoe Bend" loading="lazy" />
+      <img src="images/western/kayakpic.jpg" alt="Kayaking shot" loading="lazy" />
+      <img src="images/western/longroad.JPG" alt="Long road" loading="lazy" />
+      <img src="images/western/me4.JPG" alt="Runner" loading="lazy" />
+      <img src="images/western/me5.JPG" alt="Beach walk" loading="lazy" />
+      <img src="images/western/mg2.JPG" alt="RV trip" loading="lazy" />
+      <img src="images/western/mg3.JPG" alt="Desert road" loading="lazy" />
+      <img src="images/western/monument.JPG" alt="Monument Valley" loading="lazy" />
+      <img src="images/western/national.JPG" alt="Park landscape" loading="lazy" />
+      <img src="images/western/pacific1.JPG" alt="Pacific Coast 1" loading="lazy" />
+      <img src="images/western/pacific2.JPG" alt="Pacific Coast 2" loading="lazy" />
+      <img src="images/western/pacific3.JPG" alt="Pacific Coast 3" loading="lazy" />
+      <img src="images/western/pacific4.JPG" alt="Pacific Coast 4" loading="lazy" />
+      <img src="images/western/pacific5.JPG" alt="Pacific Coast 5" loading="lazy" />
+      <img src="images/western/pacific6.JPG" alt="Pacific Coast 6" loading="lazy" />
+      <img src="images/western/pacific7.JPG" alt="Pacific Coast 7" loading="lazy" />
+      <img src="images/western/rainbow.jpg" alt="Stormy rainbow" loading="lazy" />
+      <img src="images/western/redwood1.jpg" alt="Redwoods 1" loading="lazy" />
+      <img src="images/western/redwood2.jpg" alt="Redwoods 2" loading="lazy" />
+      <img src="images/western/river.JPG" alt="Colorado River" loading="lazy" />
+      <img src="images/western/suguaro.JPG" alt="Saguaro cactus" loading="lazy" />
+      <img src="images/western/teton1.JPG" alt="Teton 1" loading="lazy" />
+      <img src="images/western/teton2.JPG" alt="Teton 2" loading="lazy" />
+      <img src="images/western/teton3.JPG" alt="Teton 3" loading="lazy" />
+      <img src="images/western/teton4.JPG" alt="Teton 4" loading="lazy" />
+      <img src="images/western/theplanes.jpg" alt="The plains" loading="lazy" />
+      <img src="images/western/trex.JPG" alt="T-Rex bones" loading="lazy" />
+      <img src="images/western/truckinbadland.jpg" alt="Truck in Badlands" loading="lazy" />
+      <img src="images/western/Utah.JPG" alt="Utah landscape" loading="lazy" />
+      <img src="images/western/utah1.JPG" alt="Utah view 1" loading="lazy" />
+      <img src="images/western/utah2.JPG" alt="Utah view 2" loading="lazy" />
+      <img src="images/western/utah3.JPG" alt="Utah view 3" loading="lazy" />
+      <img src="images/western/utah4.JPG" alt="Utah view 4" loading="lazy" />
+      <img src="images/western/utah5.JPG" alt="Utah view 5" loading="lazy" />
+      <img src="images/western/winter (1).jpg" alt="Winter scene" loading="lazy" />
+      <img src="images/western/yellowstone1.JPG" alt="Yellowstone 1" loading="lazy" />
+      <img src="images/western/yellowstone2.JPG" alt="Yellowstone 2" loading="lazy" />
+      <img src="images/western/yellowstone3.JPG" alt="Yellowstone 3" loading="lazy" />
+      <img src="images/western/yellowstone4.JPG" alt="Yellowstone 4" loading="lazy" />
+      <img src="images/western/yellowstone5.JPG" alt="Yellowstone 5" loading="lazy" />
+      <img src="images/western/yellowstone6.JPG" alt="Yellowstone 6" loading="lazy" />
+      <img src="images/western/yellowstone7.JPG" alt="Yellowstone 7" loading="lazy" />
+      <img src="images/western/yellowstone8.JPG" alt="Yellowstone 8" loading="lazy" />
+      <img src="images/western/yellowstone9.JPG" alt="Yellowstone 9" loading="lazy" />
     </section>
+    
   </main>
   <footer>
     <div data-include="components/footer.html"></div>
